--- a/META.yml
+++ b/META.yml
@@ -1,16 +1,24 @@
 --- #YAML:1.0
-name:                Properties
-version:             1.2
-abstract:            Module for option file parsing
-license:             ~
-author:              
+name:               Properties
+version:            1.3
+abstract:           Module for option file parsing
+author:
     - Markus Mazurczak <coding@markus-mazurczak.de>
-generated_by:        ExtUtils::MakeMaker version 6.42
-distribution_type:   module
-requires:     
-    Merror:                        1.4
-    strict:                        0
-    warnings:                      0
+license:            unknown
+distribution_type:  module
+configure_requires:
+    ExtUtils::MakeMaker:  0
+build_requires:
+    ExtUtils::MakeMaker:  0
+requires:
+    Merror:    1.4
+    strict:    0
+    warnings:  0
+no_index:
+    directory:
+        - t
+        - inc
+generated_by:       ExtUtils::MakeMaker version 6.56
 meta-spec:
-    url:     http://module-build.sourceforge.net/META-spec-v1.3.html
-    version: 1.3
+    url:      http://module-build.sourceforge.net/META-spec-v1.4.html
+    version:  1.4
